@startuml
skinparam backgroundColor #ffffff
skinparam shadowing false
skinparam class {
  BackgroundColor white
  BorderColor #111111
  ArrowColor #555555
  FontSize 11
}
hide circle
hide empty members

package "Cadastro (auth)" {
  entity "users" as users {
    *id : UUID
    --
    email : varchar UNIQUE
    cpf : varchar UNIQUE
    password : varchar
    email_verified : boolean
    active : boolean
    registered_at : datetime
  }

  entity "email_verification_tokens" as email_tokens {
    *id : UUID
    --
    user_id : UUID <<FK>>
    code_hash : varchar
    created_at : datetime
    expires_at : datetime
    verified_at : datetime
    attempts : int
    reason : varchar
  }
}

package "Domínio financeiro" {
  entity "bank_accounts" as bank_accounts {
    *id : UUID
    --
    user_id : UUID <<FK>>
    institution_name : varchar
    branch_number : varchar
    account_number : varchar
    account_digit : varchar
    account_type : enum
    nickname : varchar
    current_balance : decimal
    updated_at : datetime
  }

  entity "transactions" as transactions {
    *id : UUID
    --
    bank_account_id : UUID <<FK>>
    category_id : UUID <<FK>>
    transaction_type : enum
    amount : decimal
    transaction_date : date
    description : varchar
    notes : varchar
  }

  entity "categories" as categories {
    *id : UUID
    --
    user_id : UUID <<FK>>
    category_type : enum
    name : varchar
    color : varchar
    icon : varchar
    active : boolean
  }

  entity "financial_goals" as financial_goals {
    *id : UUID
    --
    user_id : UUID <<FK>>
    category_id : UUID <<FK>>
    name : varchar
    goal_type : enum
    goal_status : enum
    target_amount : decimal
    current_amount : decimal
    start_date : date
    end_date : date
    notify_on_achieve : boolean
    notify_on_exceed : boolean
  }

  entity "goal_contributions" as goal_contributions {
    *id : UUID
    --
    goal_id : UUID <<FK>>
    user_id : UUID <<FK>>
    amount : decimal
    allocation_date : date
    description : varchar
  }
}

package "Notificações" {
  entity "notification_users" as notification_users {
    *id : UUID
    --
    email : varchar UNIQUE
    name : varchar
    active : boolean
    created_at : datetime
    updated_at : datetime
  }

  entity "email_notification_log" as notification_log {
    *id : UUID
    --
    user_id : UUID <<FK>>
    email : varchar
    subject : varchar
    template : varchar
    payload : text
    status : varchar
    error_message : varchar
    created_at : datetime
  }
}

users ||--o{ email_tokens : "user_id"
users ||--o{ bank_accounts : "user_id"
users ||--o{ categories : "user_id"
users ||--o{ financial_goals : "user_id"
users ||..> notification_users : "eventual sync"

bank_accounts ||--o{ transactions : "bank_account_id"
categories ||--o{ transactions : "category_id"
categories ||--o{ financial_goals : "category_id"
financial_goals ||--o{ goal_contributions : "goal_id"
notification_users ||--o{ notification_log : "user_id"

goal_contributions ..> users : "user_id"
transactions ..> financial_goals : "atualiza progresso"

note bottom of notification_users
  Tabela alimentada por eventos user.events
  para envio de e-mails via Resend.
end note

note bottom of financial_goals
  Campos status e progresso abastecem
  o dashboard e os alertas de metas.
end note

@enduml
